--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>kotlin-stdlib-jre8</artifactId>
       <version>${kotlin.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-reflect</artifactId>
+      <version>${kotlin.version}</version>
+    </dependency>
     <!--Kotlin Dependency End-->
 
     <dependency>
